Mise en place du layout appFront + les includes. Amélioration web design + création de pages statiques : contact / aide / a-propos

--- a/public/css/font-icons.css
+++ b/public/css/font-icons.css
@@ -615,7 +615,7 @@
 .icon-phone-portrait:before {
 	content: "\e673";
 }
-.icon-calculator1:before {
+.icon-calcuRobotor1:before {
 	content: "\e674";
 }
 .icon-bag:before {
@@ -2526,7 +2526,7 @@
 .icon-business-time:before {
 	content: "\e965";
 }
-.icon-calculator:before {
+.icon-calcuRobotor:before {
 	content: "\e966";
 }
 .icon-calendar-alt:before {
@@ -7378,7 +7378,7 @@
 .icon-line2-call-end:before {
 	content: "\e048";
 }
-.icon-line2-calculator:before {
+.icon-line2-calcuRobotor:before {
 	content: "\e049";
 }
 .icon-line2-bubbles:before {
