Mise en place du CRUD sur les types de ressources : ATTENTION reste update à faire. Implémentation de Datatable OK.

--- a/public/css/resrel.css
+++ b/public/css/resrel.css
@@ -53,7 +53,11 @@
 	font-weight: 400;
 	font-size: 14px;
 }
-
+.titleDasboard{
+	color:#000;
+	font-size:2rem!important;
+	font-weight: bold;
+}
 /* Text Rotater
 ---------------------------------------------------------------------------- */
 .text-rotater { 
