--- a/public/css/style.css
+++ b/public/css/style.css
@@ -88,6 +88,7 @@
 	padding: 0; 
 	background-attachment: fixed;  
 	min-height: 200px;
+	background-size: cover;
   }
 /* ----------------------------------------------------------------
 	Bootstrap Adjustments
@@ -180,7 +181,7 @@ h3,
 h4,
 h5,
 h6 {
-	color: #444;
+	color: #000;
 	font-weight: 500; 
 	margin: 0 0 30px 0;
 	font-family: 'Poppins', sans-serif;
@@ -193,7 +194,7 @@ h1 { font-size: 36px; }
 
 h2 { font-size: 30px; }
 
-h3 { font-size: 1.5rem; }
+h3 { font-size: 1.8rem; }
 
 h4 { font-size: 18px; }
 
