--- a/public/css/style.css
+++ b/public/css/style.css
@@ -203,7 +203,14 @@ h6 {
 h5,
 h6 { margin-bottom: 20px; }
 
-h1 { font-size: 36px; }
+h1 { 
+	font-size: 18px; 
+	color:#000!important;
+}
+h1 span { 
+	background-color: #03989e;
+	
+}
 
 h2 { font-size: 30px; }
 
@@ -245,7 +252,7 @@ h2 > span:not(.nocolor):not(.badge),
 h3 > span:not(.nocolor):not(.badge),
 h4 > span:not(.nocolor):not(.badge),
 h5 > span:not(.nocolor):not(.badge),
-h6 > span:not(.nocolor):not(.badge) { color: #0474c4 ; }
+h6 > span:not(.nocolor):not(.badge) { color: #000 ; }
 
 p,
 pre,
