--- a/public/css/resrel.css
+++ b/public/css/resrel.css
@@ -18,7 +18,7 @@
 	text-transform: none;
 }
 
-.dark #top-social { border-left: 1px solid rgba(255,255,255,0.1); }
+/* .dark #top-social { border-left: 1px solid rgba(255,255,255,0.1); } */
 
 .dark #top-social li a { color: #FFF; }
 
