--- a/public/css/resrel.css
+++ b/public/css/resrel.css
@@ -137,11 +137,11 @@
 /* Badge
 ---------------------------------------------------------------------------- */
 .badge { 
-	padding: 8px 12px;
+	padding: 4px 4px;
 	border: 0;
 	border-radius: 3px;
-	font-weight: 400;
-	font-size: 14px;
+	font-weight: 400; 
+	margin:5px;
 }
 
 .registration-badge {
@@ -157,7 +157,11 @@
 	height: 54px;
 	margin-bottom: 15px;
 }
-
+.btn {
+	font-size:12px;
+	padding:5px;
+	float:right;
+}
 .course-card .author-number {
 	font-size: 11px;
     position: absolute;
