--- a/public/css/app.css
+++ b/public/css/app.css
@@ -806,20 +806,49 @@ select {
   font-weight: 600;
 }
 
-.prose ol {
-  counter-reset: list-counter;
-  margin-top: 1.25em;
-  margin-bottom: 1.25em;
+.prose ol[type="A"] {
+  --list-counter-style: upper-alpha;
+}
+
+.prose ol[type="a"] {
+  --list-counter-style: lower-alpha;
+}
+
+.prose ol[type="A s"] {
+  --list-counter-style: upper-alpha;
+}
+
+.prose ol[type="a s"] {
+  --list-counter-style: lower-alpha;
+}
+
+.prose ol[type="I"] {
+  --list-counter-style: upper-roman;
+}
+
+.prose ol[type="i"] {
+  --list-counter-style: lower-roman;
+}
+
+.prose ol[type="I s"] {
+  --list-counter-style: upper-roman;
+}
+
+.prose ol[type="i s"] {
+  --list-counter-style: lower-roman;
+}
+
+.prose ol[type="1"] {
+  --list-counter-style: decimal;
 }
 
 .prose ol > li {
   position: relative;
-  counter-increment: list-counter;
   padding-left: 1.75em;
 }
 
 .prose ol > li::before {
-  content: counter(list-counter) ".";
+  content: counter(list-item, var(--list-counter-style, decimal)) ".";
   position: absolute;
   font-weight: 400;
   color: #6b7280;
@@ -957,11 +986,11 @@ select {
 }
 
 .prose pre code::before {
-  content: "";
+  content: none;
 }
 
 .prose pre code::after {
-  content: "";
+  content: none;
 }
 
 .prose table {
@@ -1041,6 +1070,11 @@ select {
 
 .prose h3 code {
   font-size: 0.9em;
+}
+
+.prose ol {
+  margin-top: 1.25em;
+  margin-bottom: 1.25em;
 }
 
 .prose ul {
@@ -32777,20 +32811,49 @@ select {
     font-weight: 600;
   }
 
-  .sm\:prose ol {
-    counter-reset: list-counter;
-    margin-top: 1.25em;
-    margin-bottom: 1.25em;
+  .sm\:prose ol[type="A"] {
+    --list-counter-style: upper-alpha;
+  }
+
+  .sm\:prose ol[type="a"] {
+    --list-counter-style: lower-alpha;
+  }
+
+  .sm\:prose ol[type="A s"] {
+    --list-counter-style: upper-alpha;
+  }
+
+  .sm\:prose ol[type="a s"] {
+    --list-counter-style: lower-alpha;
+  }
+
+  .sm\:prose ol[type="I"] {
+    --list-counter-style: upper-roman;
+  }
+
+  .sm\:prose ol[type="i"] {
+    --list-counter-style: lower-roman;
+  }
+
+  .sm\:prose ol[type="I s"] {
+    --list-counter-style: upper-roman;
+  }
+
+  .sm\:prose ol[type="i s"] {
+    --list-counter-style: lower-roman;
+  }
+
+  .sm\:prose ol[type="1"] {
+    --list-counter-style: decimal;
   }
 
   .sm\:prose ol > li {
     position: relative;
-    counter-increment: list-counter;
     padding-left: 1.75em;
   }
 
   .sm\:prose ol > li::before {
-    content: counter(list-counter) ".";
+    content: counter(list-item, var(--list-counter-style, decimal)) ".";
     position: absolute;
     font-weight: 400;
     color: #6b7280;
@@ -32928,11 +32991,11 @@ select {
   }
 
   .sm\:prose pre code::before {
-    content: "";
+    content: none;
   }
 
   .sm\:prose pre code::after {
-    content: "";
+    content: none;
   }
 
   .sm\:prose table {
@@ -33012,6 +33075,11 @@ select {
 
   .sm\:prose h3 code {
     font-size: 0.9em;
+  }
+
+  .sm\:prose ol {
+    margin-top: 1.25em;
+    margin-bottom: 1.25em;
   }
 
   .sm\:prose ul {
@@ -64670,20 +64738,49 @@ select {
     font-weight: 600;
   }
 
-  .md\:prose ol {
-    counter-reset: list-counter;
-    margin-top: 1.25em;
-    margin-bottom: 1.25em;
+  .md\:prose ol[type="A"] {
+    --list-counter-style: upper-alpha;
+  }
+
+  .md\:prose ol[type="a"] {
+    --list-counter-style: lower-alpha;
+  }
+
+  .md\:prose ol[type="A s"] {
+    --list-counter-style: upper-alpha;
+  }
+
+  .md\:prose ol[type="a s"] {
+    --list-counter-style: lower-alpha;
+  }
+
+  .md\:prose ol[type="I"] {
+    --list-counter-style: upper-roman;
+  }
+
+  .md\:prose ol[type="i"] {
+    --list-counter-style: lower-roman;
+  }
+
+  .md\:prose ol[type="I s"] {
+    --list-counter-style: upper-roman;
+  }
+
+  .md\:prose ol[type="i s"] {
+    --list-counter-style: lower-roman;
+  }
+
+  .md\:prose ol[type="1"] {
+    --list-counter-style: decimal;
   }
 
   .md\:prose ol > li {
     position: relative;
-    counter-increment: list-counter;
     padding-left: 1.75em;
   }
 
   .md\:prose ol > li::before {
-    content: counter(list-counter) ".";
+    content: counter(list-item, var(--list-counter-style, decimal)) ".";
     position: absolute;
     font-weight: 400;
     color: #6b7280;
@@ -64821,11 +64918,11 @@ select {
   }
 
   .md\:prose pre code::before {
-    content: "";
+    content: none;
   }
 
   .md\:prose pre code::after {
-    content: "";
+    content: none;
   }
 
   .md\:prose table {
@@ -64905,6 +65002,11 @@ select {
 
   .md\:prose h3 code {
     font-size: 0.9em;
+  }
+
+  .md\:prose ol {
+    margin-top: 1.25em;
+    margin-bottom: 1.25em;
   }
 
   .md\:prose ul {
@@ -96563,20 +96665,49 @@ select {
     font-weight: 600;
   }
 
-  .lg\:prose ol {
-    counter-reset: list-counter;
-    margin-top: 1.25em;
-    margin-bottom: 1.25em;
+  .lg\:prose ol[type="A"] {
+    --list-counter-style: upper-alpha;
+  }
+
+  .lg\:prose ol[type="a"] {
+    --list-counter-style: lower-alpha;
+  }
+
+  .lg\:prose ol[type="A s"] {
+    --list-counter-style: upper-alpha;
+  }
+
+  .lg\:prose ol[type="a s"] {
+    --list-counter-style: lower-alpha;
+  }
+
+  .lg\:prose ol[type="I"] {
+    --list-counter-style: upper-roman;
+  }
+
+  .lg\:prose ol[type="i"] {
+    --list-counter-style: lower-roman;
+  }
+
+  .lg\:prose ol[type="I s"] {
+    --list-counter-style: upper-roman;
+  }
+
+  .lg\:prose ol[type="i s"] {
+    --list-counter-style: lower-roman;
+  }
+
+  .lg\:prose ol[type="1"] {
+    --list-counter-style: decimal;
   }
 
   .lg\:prose ol > li {
     position: relative;
-    counter-increment: list-counter;
     padding-left: 1.75em;
   }
 
   .lg\:prose ol > li::before {
-    content: counter(list-counter) ".";
+    content: counter(list-item, var(--list-counter-style, decimal)) ".";
     position: absolute;
     font-weight: 400;
     color: #6b7280;
@@ -96714,11 +96845,11 @@ select {
   }
 
   .lg\:prose pre code::before {
-    content: "";
+    content: none;
   }
 
   .lg\:prose pre code::after {
-    content: "";
+    content: none;
   }
 
   .lg\:prose table {
@@ -96798,6 +96929,11 @@ select {
 
   .lg\:prose h3 code {
     font-size: 0.9em;
+  }
+
+  .lg\:prose ol {
+    margin-top: 1.25em;
+    margin-bottom: 1.25em;
   }
 
   .lg\:prose ul {
@@ -128456,20 +128592,49 @@ select {
     font-weight: 600;
   }
 
-  .xl\:prose ol {
-    counter-reset: list-counter;
-    margin-top: 1.25em;
-    margin-bottom: 1.25em;
+  .xl\:prose ol[type="A"] {
+    --list-counter-style: upper-alpha;
+  }
+
+  .xl\:prose ol[type="a"] {
+    --list-counter-style: lower-alpha;
+  }
+
+  .xl\:prose ol[type="A s"] {
+    --list-counter-style: upper-alpha;
+  }
+
+  .xl\:prose ol[type="a s"] {
+    --list-counter-style: lower-alpha;
+  }
+
+  .xl\:prose ol[type="I"] {
+    --list-counter-style: upper-roman;
+  }
+
+  .xl\:prose ol[type="i"] {
+    --list-counter-style: lower-roman;
+  }
+
+  .xl\:prose ol[type="I s"] {
+    --list-counter-style: upper-roman;
+  }
+
+  .xl\:prose ol[type="i s"] {
+    --list-counter-style: lower-roman;
+  }
+
+  .xl\:prose ol[type="1"] {
+    --list-counter-style: decimal;
   }
 
   .xl\:prose ol > li {
     position: relative;
-    counter-increment: list-counter;
     padding-left: 1.75em;
   }
 
   .xl\:prose ol > li::before {
-    content: counter(list-counter) ".";
+    content: counter(list-item, var(--list-counter-style, decimal)) ".";
     position: absolute;
     font-weight: 400;
     color: #6b7280;
@@ -128607,11 +128772,11 @@ select {
   }
 
   .xl\:prose pre code::before {
-    content: "";
+    content: none;
   }
 
   .xl\:prose pre code::after {
-    content: "";
+    content: none;
   }
 
   .xl\:prose table {
@@ -128691,6 +128856,11 @@ select {
 
   .xl\:prose h3 code {
     font-size: 0.9em;
+  }
+
+  .xl\:prose ol {
+    margin-top: 1.25em;
+    margin-bottom: 1.25em;
   }
 
   .xl\:prose ul {
@@ -160349,20 +160519,49 @@ select {
     font-weight: 600;
   }
 
-  .\32xl\:prose ol {
-    counter-reset: list-counter;
-    margin-top: 1.25em;
-    margin-bottom: 1.25em;
+  .\32xl\:prose ol[type="A"] {
+    --list-counter-style: upper-alpha;
+  }
+
+  .\32xl\:prose ol[type="a"] {
+    --list-counter-style: lower-alpha;
+  }
+
+  .\32xl\:prose ol[type="A s"] {
+    --list-counter-style: upper-alpha;
+  }
+
+  .\32xl\:prose ol[type="a s"] {
+    --list-counter-style: lower-alpha;
+  }
+
+  .\32xl\:prose ol[type="I"] {
+    --list-counter-style: upper-roman;
+  }
+
+  .\32xl\:prose ol[type="i"] {
+    --list-counter-style: lower-roman;
+  }
+
+  .\32xl\:prose ol[type="I s"] {
+    --list-counter-style: upper-roman;
+  }
+
+  .\32xl\:prose ol[type="i s"] {
+    --list-counter-style: lower-roman;
+  }
+
+  .\32xl\:prose ol[type="1"] {
+    --list-counter-style: decimal;
   }
 
   .\32xl\:prose ol > li {
     position: relative;
-    counter-increment: list-counter;
     padding-left: 1.75em;
   }
 
   .\32xl\:prose ol > li::before {
-    content: counter(list-counter) ".";
+    content: counter(list-item, var(--list-counter-style, decimal)) ".";
     position: absolute;
     font-weight: 400;
     color: #6b7280;
@@ -160500,11 +160699,11 @@ select {
   }
 
   .\32xl\:prose pre code::before {
-    content: "";
+    content: none;
   }
 
   .\32xl\:prose pre code::after {
-    content: "";
+    content: none;
   }
 
   .\32xl\:prose table {
@@ -160584,6 +160783,11 @@ select {
 
   .\32xl\:prose h3 code {
     font-size: 0.9em;
+  }
+
+  .\32xl\:prose ol {
+    margin-top: 1.25em;
+    margin-bottom: 1.25em;
   }
 
   .\32xl\:prose ul {
