--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,8 +1,12 @@
 
+/* Style de la bannière statistiques */
+.banniere, .banniere-statistiques{
+  width: 100%;
+}
+
 /* Style du content global */
 .content{
   background-color: rgba(211,211,211,0.2);
-  height: 100%;
   width: 100%;
 }
 
@@ -11,16 +15,61 @@
   font-size:20px;
 }
 
+/* Style des bouton d'export */
+h2{
+  margin-left: 3em !important;
+}
+button{
+  border-radius:5% !important;
+  margin-left: 3em !important;
+}
+button a{
+  color:black;
+  text-decoration:none;
+}
+button a:hover{
+  color: white;
+}
+
+/* Style des icônes de table */
+.logo-statistiques{
+  width: 150px;
+  height: 150px;
+  margin-right: 4em;
+  margin-top: 3em;
+}
+
+/* Style de la table globale */
+.tableGlobale{
+  margin-left: 10em;
+}
+.reload{
+  width: 50px;
+  height: 50px;
+  margin-left: 4em;
+  margin-top: 2em;
+}
+.reload:hover{
+-webkit-animation: rotate(360deg) infinite;
+        animation: rotate(360deg) infinite;
+}
 /* Style des tables */
-.tableContainer1{
-  padding-top:3em;
+.tableContainer1,.adminexport{
+  padding-top:3em !important;
+  max-width: 90%;
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
 }
 .tableContainer1,.tableContainer2,.tableContainer3{
   margin-left:4em;
   max-width: 90%;
-  display: flex;
-  justify-content: space-around;
   margin-bottom: 2em;
+  background-color: rgba(211,211,211,0.4);
+  padding: 15px;
+}
+.tableContainer3{
+  margin-bottom: 30px;
 }
 
 .master_title_table{
